first pass as separate code

--- a/cc.html
+++ b/cc.html
@@ -728,13 +728,13 @@
 
     <script type="text/javascript" src="js/dynamic/GLBoilerplate.js"></script>
     <script type="text/javascript" src="js/dynamic/GPUMath.js"></script>
-    <script type="text/javascript" src="js/threeView.js"></script>
+    <script type="text/javascript" src="cc/ThreeView.js"></script>
     <script type="text/javascript" src="js/node.js"></script>
     <script type="text/javascript" src="js/beam.js"></script>
     <script type="text/javascript" src="js/crease.js"></script>
     <script type="text/javascript" src="js/Model3D.js"></script>
     <script type="text/javascript" src="js/3dUI.js"></script>
-    <script type="text/javascript" src="js/dynamic/dynamicSolver.js"></script>
+    <script type="text/javascript" src="js/dynamic/DynamicSolver.js"></script>
     <script type="text/javascript" src="js/PatternImporter.js"></script>
     <script type="text/javascript" src="js/PatternViewer2D.js"></script>
     <script type="text/javascript" src="js/FileImporter.js"></script>
@@ -743,6 +743,9 @@
 
 </head>
 <body>
+
+<div  id="threeContainer"></div>
+<canvas id="gpuMathCanvas"></canvas>
 
 </body>
 </html>
