--- a/cc.html
+++ b/cc.html
@@ -6,11 +6,7 @@
 
     <meta name="viewport" content="width=400">
 
-    <link href="dependencies/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-    <link rel="stylesheet" type="text/css" href="dependencies/flat-ui.min.css"/>
-    <link rel="stylesheet" type="text/css" href="dependencies/jquery-ui.min.css"/>
-    <link rel="stylesheet" type="text/css" href="css/nav.css"/>
-    <link rel="stylesheet" type="text/css" href="css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="cc/main.css"/>
 
     <script id="vertexShader" type="x-shader/x-vertex">
         attribute vec2 a_position;
@@ -716,8 +712,6 @@
 
 
     <script type="text/javascript" src="dependencies/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="dependencies/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="dependencies/flat-ui.min.js"></script>
     <script type="text/javascript" src="dependencies/three.min.js"></script>
     <script type="text/javascript" src="dependencies/TrackballControls.js"></script>
     <script type="text/javascript" src="dependencies/underscore-min.js"></script>
@@ -736,7 +730,6 @@
     <script type="text/javascript" src="js/3dUI.js"></script>
     <script type="text/javascript" src="js/dynamic/DynamicSolver.js"></script>
     <script type="text/javascript" src="js/PatternImporter.js"></script>
-    <script type="text/javascript" src="js/PatternViewer2D.js"></script>
     <script type="text/javascript" src="js/FileImporter.js"></script>
 
     <script type="text/javascript" src="cc/main.js"></script>
