--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 
     <meta name="viewport" content="width=400">
 
+    <meta property="og:title" content="Origami Simulator ">
+    <meta property="og:description" content=" Real-time WebGL origami simulator app">
+    <meta property="og:image" content="http://apps.amandaghassaei.com/OrigamiSimulator/assets/doc/strain.jpg">
+    <meta property="og:url" content="http://apps.amandaghassaei.com/OrigamiSimulator/">
+
+    <meta name="twitter:title" content="Origami Simulator ">
+    <meta name="twitter:description" content=" Real-time WebGL origami simulator app">
+    <meta name="twitter:image" content="http://apps.amandaghassaei.com/OrigamiSimulator/assets/doc/strain.jpg">
+    <meta name="twitter:card" content="http://apps.amandaghassaei.com/OrigamiSimulator/assets/doc/strain.jpg">
+
     <link href="dependencies/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="dependencies/flat-ui.min.css"/>
     <link rel="stylesheet" type="text/css" href="dependencies/jquery-ui.min.css"/>
