--- a/index.html
+++ b/index.html
@@ -1172,14 +1172,14 @@
     <div class="sliderInput floatRight" id="creasePercentBottom">
         <div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
     </div>
-    <div id="flatIndicator" class="smallTxt">
+    <a href="#" id="flatIndicator" class="smallTxt">
         <img src="assets/flatcraneSmall.png"/>
         Flat
-    </div>
-    <div id="foldedIndicator" class="smallTxt">
+    </a>
+    <a href="#" id="foldedIndicator" class="smallTxt">
         <img src="assets/foldedCraneSmall.png"/>
         Folded
-    </div>
+    </a>
 </div>
 <div id="controlsLeft" class="flipped">
     <div>
