--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
                     </ul>
                         <img style="width: 100%;" src="assets/doc/strain.jpg" />
                     <ul>
-                        <li>Visualize the internal strain of the origami as it folds using the <b>Strain Visualization</b> in the left menu.</li>
+                        <li>Visualize the internal strain of the origami as it folds using the <b>Strain Visualization</b> in the left menu of the <b>Advanced Options</b>.</li>
                     </ul>
                         <img style="width: 100%; max-width:600px" src="assets/doc/huffmanvr.jpg" /><br/>
                     <ul>
