--- a/index.html
+++ b/index.html
@@ -1478,10 +1478,15 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
                 <b>EXPORT OBJ</b><br/><br/>
-                Filename: &nbsp;&nbsp;<input id="objFilename" value="" placeholder="" class="bigInput text form-control" type="text"> .stl<br/><br/>
+                <span class="smallTxt">These OBJs are compatible with Freeform Origami</span><br/>
+                Filename: &nbsp;&nbsp;<input id="objFilename" value="" placeholder="" class="bigInput text form-control" type="text"> .obj<br/><br/>
                 Scale: &nbsp;&nbsp;<input value="" placeholder="" class="float exportScale form-control" type="text"><br/><br/>
                 Dimensions: &nbsp;&nbsp;<b><span class="exportDimensions"></span></b><br/>
                 <span class="smallTxt">( the OBJ file format is unitless, but typically assumed to be either in inches or mm )</span><br/>
+                <!--<label class="bigLabel checkbox" for="doublesidedOBJ">-->
+                    <!--<input id="polyFacesOBJ" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>-->
+                    <!--Allow polygonal faces-->
+                <!--</label>-->
                 <label class="bigLabel checkbox" for="doublesidedOBJ">
                     <input id="doublesidedOBJ" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
                     Double Sided
