--- a/index.html
+++ b/index.html
@@ -1371,7 +1371,7 @@
                         </object>
                     <ul>
                         <li>Line style and stroke width do not matter.</li>
-                        <li>Remove all groups and clipping masks from your file before importing.</li>
+                        <li>Remove clipping masks from your file before importing.</li>
                         <li>This tool should be able to automatically clean files of slightly misaligned vertices, stray vertices,
                         duplicate lines, and extra vertices falling in the middle of an edge,
                         but it is recommended to remove these errors yourself in order to avoid problems.</li>
@@ -1383,7 +1383,7 @@
                 <b>For Adobe Illustrator users:</b><br/><br/>
                 I use Illustrator to create SVGs (though any vector editing program should be fine).  Here are some tips I've found for making svgs to import into this tool.<br/><br/>
                     <ul>
-                        <li>If you are starting with a pre-made vector file, first ungroup any groups (<b>Select all + Object > Ungroup All</b>) and release all clipping masks (<b>Select all + Object > Clipping Mask > Release</b>).</li>
+                        <li>If you are starting with a pre-made vector file, first release all clipping masks (<b>Select all + Object > Clipping Mask > Release</b>).</li>
                         <li>Create geometry using the <b>Line Segment</b>, <b>Rectangle</b>,  and <b>Polygon</b> tools.</li>
                         <li>Illustrator can help you select all lines of a particular type so that you can edit their color or opacity together.  Click the line,
                         then go to <b>Select > Same > Appearance</b> to select all similar lines in the pattern.
