--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
         uniform float u_creasePercent;
         uniform float u_dt;
         uniform float u_axialStiffness;
+        uniform float u_faceStiffness;
         uniform sampler2D u_lastPosition;
         uniform sampler2D u_lastVelocity;
         uniform sampler2D u_originalPosition;
@@ -352,7 +353,7 @@
                 vec3 normal = getFromArray(faceMeta[0], u_textureDimFaces, u_normals).xyz;
 
                 //calc forces
-                anglesDiff *= u_axialStiffness/100.0;
+                anglesDiff *= u_faceStiffness;
                 if (faceIndex == 0){//a
                     vec3 normalCrossAC = cross(normal, ac)/lengthAC;
                     vec3 normalCrossAB = cross(normal, ab)/lengthAB;
@@ -391,6 +392,7 @@
         uniform float u_creasePercent;
         uniform float u_dt;
         uniform float u_axialStiffness;
+        uniform float u_faceStiffness;
         uniform sampler2D u_lastPosition;
         uniform sampler2D u_lastLastPosition;
         uniform sampler2D u_lastVelocity;
@@ -559,7 +561,7 @@
                 vec3 normal = getFromArray(faceMeta[0], u_textureDimFaces, u_normals).xyz;
 
                 //calc forces
-                anglesDiff *= u_axialStiffness/100.0;
+                anglesDiff *= u_faceStiffness;
                 if (faceIndex == 0){//a
                     vec3 normalCrossAC = cross(normal, ac)/lengthAC;
                     vec3 normalCrossAB = cross(normal, ab)/lengthAB;
@@ -1124,20 +1126,20 @@
                 <span class="label-slider">Axial Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
                 <input value="" placeholder="" class="float form-control" type="text">
             </div>
-            <!--<div class="sliderInput paddingBottom" id="triStiffness">-->
-                <!--<span class="label-slider">Triangle Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>-->
-                <!--<input value="" placeholder="" class="float form-control" type="text">-->
-            <!--</div>-->
+            <div class="sliderInput paddingBottom" id="faceStiffness">
+                <span class="label-slider">Face Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+                <input value="" placeholder="" class="float form-control" type="text">
+            </div>
             <div class="sliderInput" id="creaseStiffness">
                 <span class="label-slider">Fold Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
                 <input value="" placeholder="" class="float form-control" type="text">
             </div>
             <div class="sliderInput" id="panelStiffness">
-                <span class="label-slider">Facet Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+                <span class="label-slider">Facet Crease Stiffness : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
                 <input value="" placeholder="" class="float form-control" type="text">
             </div>
             <div class="sliderInput" id="percentDamping">
-                <span class="label-slider">Damping (0-1): </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+                <span class="label-slider">Damping : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
                 <input value="" placeholder="" class="float form-control" type="text">
             </div>
         </div><br/>
